--- a/functions/test-db/json2/scvo/partials/sidebar-library-search.hbs
+++ b/functions/test-db/json2/scvo/partials/sidebar-library-search.hbs
@@ -6,9 +6,9 @@
     <div class="mdc-form-field">
         <select class="mdc-select" role="listbox" id="evidence-library-classification" name="classification">
             <option value="" {{#if params.query.classification}}{{else}}selected{{/if}}>All categories</option>
-            {{#each supplimentaryResponses.types.aggregations.types.buckets}}
+            {{#each supplimentaryResponses.types.aggregations.types.buckets ~}}
             <option value="{{slugify key}}" {{#compare ../params.query.classification "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
-            {{/each}}
+            {{/each ~}}
         </select>
     </div>
     <button class="mdc-button mdc-button--raised" type="submit">
