--- a/functions/test-db/json2/scvo/partials/header-splash.hbs
+++ b/functions/test-db/json2/scvo/partials/header-splash.hbs
@@ -2,21 +2,21 @@
     <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
         <div class="container-fluid">
             <div class="mdc-layout-grid">
-                {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                {{#if primaryResponse.hits.hits.[0]._source.header_text ~}}
                     <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                 {{else}}
                     <h1 class="header-text">
                         <span class="header-text-banner">
-                            {{#if primaryResponse.hits.hits.[0]}}
-                                {{#unless primaryResponse.hits.hits.[0]._source.hide_overlay}}
+                            {{#if primaryResponse.hits.hits.[0] ~}}
+                                {{#unless primaryResponse.hits.hits.[0]._source.hide_overlay ~}}
                                     {{{primaryResponse.hits.hits.[0]._source.title}}}
-                                {{/unless}}
+                                {{/unless ~}}
                             {{else}}
                                 404: Not found
-                            {{/if}}
+                            {{/if ~}}
                         </span>
                     </h1>
-                {{/if}}
+                {{/if ~}}
             </div>
             {{> header_caption}}
         </div>
