--- a/functions/test-db/json2/scvo/partials/highlight-result.hbs
+++ b/functions/test-db/json2/scvo/partials/highlight-result.hbs
@@ -1,6 +1,5 @@
-{{#ifAll (contains _source.rendered.scvo_search_result "%highlights%") (contains _source.rendered.scvo_search_result "%/highlights%") highlight.text_bag}}
-    
+{{#ifAll (contains _source.rendered.scvo_search_result "%highlights%") (contains _source.rendered.scvo_search_result "%/highlights%") highlight.text_bag ~}}
     {{{regexReplace _source.rendered.scvo_search_result "(%highlights%)(.|[\r\n])*?(%/highlights%)" "img" (removeEntities (concat "<p class=\"results-highlights\">..." (join highlight.text_bag " ... ... ") " ...</p>"))}}}
 {{else}}
     {{{regexReplace _source.rendered.scvo_search_result "(%/?highlights%)" "igm" ""}}}
-{{/ifAll}}
+{{/ifAll ~}}
