--- a/functions/test-db/json2/scvo/partials/menu-cjs-employers.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-cjs-employers.hbs
@@ -1,14 +1,14 @@
 <nav class="menu-sidebar" id="cjs-employers-menu">
-    {{#each context.menus.cjs-employers}}
+    {{#each context.menus.cjs-employers ~}}
     <a class="menu-level-1 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children}}
+    {{#each this.children ~}}
     <a class="menu-level-2 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children}}
+    {{#each this.children ~}}
     <a class="menu-level-3 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children}}
+    {{#each this.children ~}}
     <a class="menu-level-4 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{/each}}
-    {{/each}}
-    {{/each}}
-    {{/each}}
+    {{/each ~}}
+    {{/each ~}}
+    {{/each ~}}
+    {{/each ~}}
 </nav>
