--- a/functions/test-db/json2/scvo/partials/menu-running-financial.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-running-financial.hbs
@@ -1,16 +1,16 @@
 <nav class="menu-sidebar" id="running-financial-menu">
-    {{#each context.menus.running-financial}}
+    {{#each context.menus.running-financial ~}}
     <a class="menu-level-1 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children}}
+    {{#each this.children ~}}
     <a class="menu-level-2 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children}}
+    {{#each this.children ~}}
     <a class="menu-level-3 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{#each this.children}}
+    {{#each this.children ~}}
     <a class="menu-level-4 mdc-button mdc-button--raised{{#if match}} mdc-button--active{{/if}}" href="{{path}}">{{{label}}}</a>
-    {{/each}}
-    {{/each}}
-    {{/each}}
-    {{/each}}
+    {{/each ~}}
+    {{/each ~}}
+    {{/each ~}}
+    {{/each ~}}
 </nav>
 
 {{> sidebar_running}}
