--- a/functions/test-db/json2/scvo/templates/events/event-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-booking.hbs
@@ -1,7 +1,7 @@
 <div class="event event-booking">
     {{> header_splash_event}}
     <div class="container-fluid">
-        {{#with primaryResponse.hits.hits.[0]._source}}
+        {{#with primaryResponse.hits.hits.[0]._source ~}}
             <ul class="breadcrumbs">
                 <li><a href="/">Home</a></li>
                 <li><a href="/events">Events</a></li>
@@ -11,24 +11,20 @@
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content event-content">
-                        {{#compare course_type "===" "Training Course"}}
+                        {{#compare course_type "===" "Training Course" ~}}
                         <iframe src="https://www.surveygizmo.eu/s3/90055302/Events-Booking-Training-Events?sfid={{Id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
+                        <p>
+                            <strong><a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx" download>Policies, procedures and terms &amp; conditions</a></strong>
+                        </p>
                         {{else}}
                         <iframe src="https://www.surveygizmo.eu/s3/90066146/Event-Booking-Events?sfid={{Id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
-                        {{/compare}}
-
-                        {{#compare course_type "===" "Training Course"}}
                         <p>
                             <strong><a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx" download>Policies, procedures and terms &amp; conditions</a></strong>
                         </p>
-                        {{else}}
-                        <p>
-                            <strong><a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx" download>Policies, procedures and terms &amp; conditions</a></strong>
-                        </p>
-                        {{/compare}}
+                        {{/compare ~}}
                     </div>
                 </div>
             </div>
-        {{/with}}
+        {{/with ~}}
     </div>
 </div>
