--- a/functions/test-db/json2/scvo/templates/events/event-cjs-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-cjs-booking.hbs
@@ -1,7 +1,7 @@
 <div class="event event-booking">
     {{> header_splash_event}}
     <div class="container-fluid">
-        {{#with primaryResponse.hits.hits.[0]._source}}
+        {{#with primaryResponse.hits.hits.[0]._source ~}}
             <ul class="breadcrumbs">
                 <li><a href="/">Home</a></li>
                 <li><a href="/jobs">Jobs</a></li>
@@ -15,7 +15,7 @@
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content event-content">
                         [FORM TO BE ADDED]
 
-                        {{#compare course_type "===" "Training Course"}}
+                        {{#compare course_type "===" "Training Course" ~}}
                         <p>
                             <strong><a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx" download>Policies, procedures and terms &amp; conditions</a></strong>
                         </p>
@@ -23,10 +23,10 @@
                         <p>
                             <strong><a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx" download>Policies, procedures and terms &amp; conditions</a></strong>
                         </p>
-                        {{/compare}}
+                        {{/compare ~}}
                     </div>
                 </div>
             </div>
-        {{/with}}
+        {{/with ~}}
     </div>
 </div>
