--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2613,9 +2613,9 @@ body.post.author {
 }
 .book-now .mdc-button {
     margin: 0 auto;
-    width: 70%;
-    display: block;
     margin-left: 30%;
+    // width: 70%;
+    // display: block;
 }
 .booking {
     font-size: 2rem;
