--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2599,18 +2599,23 @@ body.post.author {
 .events .inline-dl {
     dt {
         font-weight: 600;
-        font-size: 1.15rem;
+        // font-size: 1.15rem;
     }
     dd {
         margin: 0 0 $unit;
         .mdc-layout-grid__cell strong {
-            font-size: 1.15rem;
+            // font-size: 1.15rem;
         }
         .mdc-layout-grid__inner:last-child {
             margin-bottom: 0;
         }
     }
 }
+// .events .full {
+//     h2 {
+//         margin-top: $unit*2;
+//     }
+// }
 .book-now .mdc-button {
     margin: 0 auto;
     margin-left: 30%;
@@ -2936,12 +2941,12 @@ ul.supplimentary-list {
     margin-bottom: $unit;
 }
 .digital.events .full {
-    .scvo-event-digital-brand-charter {
-
-    }
-    .event-sidebar {
-        text-align: right;
-    }
+    // .scvo-event-digital-brand-charter {
+    //
+    // }
+    // .event-sidebar {
+    //     text-align: right;
+    // }
 }
 
 h1,
@@ -3490,6 +3495,12 @@ footer {
     }
 }
 
+@media screen and (max-width: 570px) {
+    .events .related .photo-wee {
+        max-width: 110px;
+    }
+}
+
 @media screen and (max-width: 479px) {
     .home .featured-content {
         .featured-background-image img.header-text {
@@ -3498,6 +3509,9 @@ footer {
         .featured-info-summary {
             margin-top: 0;
         }
+    }
+    .events .related .photo-wee {
+        max-width: 64px;
     }
     .digital {
         .latest_content {
