--- a/functions/test-db/json2/scvo/templates/events/event-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/events/event-digital.hbs
@@ -33,7 +33,7 @@
         <div class="mdc-layout-grid related">
             <div class="mdc-layout-grid__inner">
                 {{#each supplimentaryResponses.related_events.hits.hits}}
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <ul class="supplimentary-list">
                         {{{_source.rendered.scvo_list}}}
                     </ul>
