Added new report

--- a/functions/test-db/json2/digitalparticipation/templates/resources-detail.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/resources-detail.hbs
@@ -92,6 +92,15 @@
 
             <dl>
                 <dt>
+                    <a href="https://www.cas.org.uk/publications/launch-disconnected-understanding-digital-inclusion-and-improving-access">Disconnected: Understanding Digital Inclusion and Improving Access</a>
+                </dt>
+                <dd>
+                    Citizens Advice Scotland's research shows there is a risk that people without sufficient access to the internet, or skills to engage with digital content, will be left out. In some instances, this can be to the detriment of their basic and fundamental rights.
+                </dd>
+            </dl>
+
+            <dl>
+                <dt>
                     <a href="https://www.carnegieuktrust.org.uk/publications/digital-savvy-citizens/">Digitally Savvy Citizens</a>
                 </dt>
                 <dd>
